force-app/main/default/objects/Pipeline_Scenario__c/Pipeline_Scenario__c.object-meta.xml
<CustomObject>
    <label>Pricing Scenario</label>
    <nameField>
        <label>Pricing Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing  Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>