force-app/main/default/objects/Pipeline_Scenario__c/fields/Agency_Services__c.field-meta.xml
<CustomField>
    <fullName>Agency_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agency Services?</label>
    <type>Checkbox</type>
</CustomField>