force-app/main/default/objects/Pipeline_Scenario__c/fields/Balancing__c.field-meta.xml
<CustomField>
    <fullName>Balancing__c</fullName>
    <defaultValue>0</defaultValue>
    <description>cost per Dth</description>
    <inlineHelpText>cost per Dth</inlineHelpText>
    <label>Balancing</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>