force-app/main/default/objects/Pipeline_Scenario__c/fields/Cashout_Obligation_Terms__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Obligation_Terms__c</fullName>
    <label>Cashout Obligation Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>