force-app/main/default/objects/Pipeline_Scenario__c/fields/Cashout_Over_Index__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Over_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cashout Over Index</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Index__c.Over_Rate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Filter required for desired results.  DO NOT REMOVE</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Index__c</referenceTo>
    <relationshipName>Pipeline_Scenarios7</relationshipName>
    <type>Lookup</type>
</CustomField>