force-app/main/default/objects/Pipeline_Scenario__c/fields/Cashout_Over_Margin__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Over_Margin__c</fullName>
    <label>Cashout Over Margin</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>