force-app/main/default/objects/Pipeline_Scenario__c/fields/Cashout_Under_Adder__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Under_Adder__c</fullName>
    <label>Cashout Under Adder</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>