force-app/main/default/objects/Pipeline_Scenario__c/fields/Demand_Charge__c.field-meta.xml
<CustomField>
    <fullName>Demand_Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demand Charge</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipName>Pipeline_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>