force-app/main/default/objects/Pipeline_Scenario__c/fields/Fuel__c.field-meta.xml
<CustomField>
    <fullName>Fuel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fuel</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipName>Pipeline_Scenarios1</relationshipName>
    <type>Lookup</type>
</CustomField>