force-app/main/default/objects/Pipeline_Scenario__c/fields/Main_Financial_Basis__c.field-meta.xml
<CustomField>
    <fullName>Main_Financial_Basis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Financial Basis</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Pricing  Scenarios (Main Financial Basis)</relationshipLabel>
    <relationshipName>Main_Financial_Basis_Scenario</relationshipName>
    <type>Lookup</type>
</CustomField>