force-app/main/default/objects/Pipeline_Scenario__c/fields/Main_Financial_Basis_Percent__c.field-meta.xml
<CustomField>
    <fullName>Main_Financial_Basis_Percent__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Main Financial Basis Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>