force-app/main/default/objects/Pipeline_Scenario__c/fields/Main_Physical_Basis__c.field-meta.xml
<CustomField>
    <fullName>Main_Physical_Basis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Physical Basis</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Pricing  Scenarios (Main Physical Basis)</relationshipLabel>
    <relationshipName>Pricing_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>