force-app/main/default/objects/Pipeline_Scenario__c/fields/Margin_on_Index__c.field-meta.xml
<CustomField>
    <fullName>Margin_on_Index__c</fullName>
    <label>CES Margin on Index</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>