force-app/main/default/objects/Pipeline_Scenario__c/fields/Margin_on_Over__c.field-meta.xml
<CustomField>
    <fullName>Margin_on_Over__c</fullName>
    <label>Margin on Over</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>