force-app/main/default/objects/Pipeline_Scenario__c/fields/Market_Rate_Index__c.field-meta.xml
<CustomField>
    <fullName>Market_Rate_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Rate Index</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Index__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Market Price</value>
        </filterItems>
        <filterItems>
            <field>Index__c.Index_Rate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Filter is required for desired results.  DO NOT REMOVE</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Index__c</referenceTo>
    <relationshipName>Pipeline_Scenarios3</relationshipName>
    <type>Lookup</type>
</CustomField>