force-app/main/default/objects/Pipeline_Scenario__c/fields/Market_Rate_Margin__c.field-meta.xml
<CustomField>
    <fullName>Market_Rate_Margin__c</fullName>
    <label>Market Rate Margin</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>