force-app/main/default/objects/Pipeline_Scenario__c/fields/Market_Rate_Under_Index__c.field-meta.xml
<CustomField>
    <fullName>Market_Rate_Under_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Rate Under Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Pricing  Scenarios (Market Rate Under Index)</relationshipLabel>
    <relationshipName>Pricing_Scenarios5</relationshipName>
    <type>Lookup</type>
</CustomField>