force-app/main/default/objects/Pipeline_Scenario__c/fields/Miscellaneous_Adjustment_Strip__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Adjustment_Strip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>a list of cost by month that the pricing should be adjusted by.</description>
    <inlineHelpText>a list of cost by month that the pricing should be adjusted by.</inlineHelpText>
    <label>Miscellaneous Adjustment Strip</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Pricing  Scenarios (Miscellaneous Adjustment Strip)</relationshipLabel>
    <relationshipName>Pricing_Scenarios3</relationshipName>
    <type>Lookup</type>
</CustomField>