force-app/main/default/objects/Pipeline_Scenario__c/fields/Other_Charges_or_Items__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_or_Items__c</fullName>
    <defaultValue>0</defaultValue>
    <description>for anything else that&#39;s a constant fee and needs to get added but doesn&#39;t fit somewhere else</description>
    <inlineHelpText>for anything else that&#39;s a constant fee and needs to get added but doesn&#39;t fit somewhere else</inlineHelpText>
    <label>Other Charges or Items</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>