force-app/main/default/objects/Pipeline_Scenario__c/fields/Over_Adder__c.field-meta.xml
<CustomField>
    <fullName>Over_Adder__c</fullName>
    <label>Over Adder</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>