force-app/main/default/objects/Pipeline_Scenario__c/fields/Physical_Only_Premium__c.field-meta.xml
<CustomField>
    <fullName>Physical_Only_Premium__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For NYMEX deals, what is the physical basis premium to NYMEX?</description>
    <inlineHelpText>For NYMEX deals, what is the physical basis premium to NYMEX?</inlineHelpText>
    <label>Physical Only Premium</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Pricing  Scenarios (Physical Only Premium)</relationshipLabel>
    <relationshipName>Nymex_Physical_Only_Premium</relationshipName>
    <type>Lookup</type>
</CustomField>