force-app/main/default/objects/Pipeline_Scenario__c/fields/Physical_Premium_to_Index__c.field-meta.xml
<CustomField>
    <fullName>Physical_Premium_to_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What physical premium is added to the financial basis for a basis only or citygate deal?</description>
    <inlineHelpText>What physical premium is added to the financial basis for a basis only or citygate deal?  If the number never changes, you can use the single field instead of this lookup</inlineHelpText>
    <label>Physical Premium to Index (Strip)</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Pricing  Scenarios (Physical Premium to Index (Strip))</relationshipLabel>
    <relationshipName>Physical_Premium</relationshipName>
    <type>Lookup</type>
</CustomField>