force-app/main/default/objects/Pipeline_Scenario__c/fields/Physical_Premium_to_Index_Constant__c.field-meta.xml
<CustomField>
    <fullName>Physical_Premium_to_Index_Constant__c</fullName>
    <defaultValue>0</defaultValue>
    <description>What physical premium is added to the financial basis for a basis only or citygate deal?</description>
    <inlineHelpText>What physical premium ($/Dth) is added to the financial basis for a basis only or citygate deal? If the number changes, use the Strip lookup field instead of this single number</inlineHelpText>
    <label>Physical Premium to Index (Constant)</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>