force-app/main/default/objects/Pipeline_Scenario__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipName>Pipeline_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>