force-app/main/default/objects/Pipeline_Scenario__c/fields/Pipeline_Commodity__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Commodity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pipeline Commodity</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipName>Pipeline_ScenariosCommodity</relationshipName>
    <type>Lookup</type>
</CustomField>