force-app/main/default/objects/Pipeline_Scenario__c/fields/PrdId__c.field-meta.xml
<CustomField>
    <fullName>PrdId__c</fullName>
    <externalId>true</externalId>
    <label>PrdId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>