force-app/main/default/objects/Pipeline_Scenario__c/fields/Pricing_Index__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Index for contract pricing</inlineHelpText>
    <label>Pricing Index</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Index__c.Index_Rate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Index__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Index</value>
        </filterItems>
        <infoMessage>Filter is required for desired results.  DO NOT REMOVE</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Index__c</referenceTo>
    <relationshipName>Pipeline_Scenarios2</relationshipName>
    <type>Lookup</type>
</CustomField>