force-app/main/default/objects/Pipeline_Scenario__c/fields/Renewal_Notice_Days__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notice_Days__c</fullName>
    <inlineHelpText>How many days notice prior to the end of the term is necessary to terminate the auto renewal?</inlineHelpText>
    <label>Renewal Notice Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>