force-app/main/default/objects/Pipeline_Scenario__c/fields/Renewal_Term__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Term__c</fullName>
    <inlineHelpText>How many months does the contract renew for?</inlineHelpText>
    <label>Renewal Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>