force-app/main/default/objects/Pipeline_Scenario__c/fields/Secondary_Financial_Basis__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Financial_Basis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Financial Basis</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Pricing  Scenarios (Seconday Financial Basis)</relationshipLabel>
    <relationshipName>SFB</relationshipName>
    <type>Lookup</type>
</CustomField>