force-app/main/default/objects/Pipeline_Scenario__c/fields/Secondary_Physical_Basis__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Physical_Basis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Secondary Physical Basis</description>
    <inlineHelpText>For blended basis, the secondary index used</inlineHelpText>
    <label>Secondary Physical Basis</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Secondary Physical Basis</relationshipLabel>
    <relationshipName>SPB</relationshipName>
    <type>Lookup</type>
</CustomField>