force-app/main/default/objects/Pipeline_Scenario__c/fields/Secondary_Physical_Basis_Percent__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Physical_Basis_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Secondary Physical Basis Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>