force-app/main/default/objects/Pipeline_Scenario__c/fields/Seconday_Financial_Basis__c.field-meta.xml
<CustomField>
    <fullName>Seconday_Financial_Basis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seconday Financial Basis</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Pricing  Scenarios (Seconday Financial Basis)</relationshipLabel>
    <relationshipName>Pricing_Scenarios2</relationshipName>
    <type>Lookup</type>
</CustomField>