force-app/main/default/objects/Pipeline_Scenario__c/fields/Summer_Swing__c.field-meta.xml
<CustomField>
    <fullName>Summer_Swing__c</fullName>
    <defaultValue>0</defaultValue>
    <description>cost per Dth</description>
    <inlineHelpText>cost per Dth</inlineHelpText>
    <label>Summer Swing</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>