force-app/main/default/objects/Pipeline_Scenario__c/fields/TC_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>TC_Unit_of_Measure__c</fullName>
    <description>what unit of measure is displayed on the TC</description>
    <inlineHelpText>what unit of measure is displayed on the TC</inlineHelpText>
    <label>TC Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MMBtu</fullName>
            </value>
            <value>
                <fullName>Therm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>