force-app/main/default/objects/Pipeline_Scenario__c/fields/Telemetry__c.field-meta.xml
<CustomField>
    <fullName>Telemetry__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>telemetry maintenance language displays on tc</inlineHelpText>
    <label>Telemetry?</label>
    <type>Checkbox</type>
</CustomField>