force-app/main/default/objects/Pipeline_Scenario__c/fields/Transport_Fuel__c.field-meta.xml
<CustomField>
    <fullName>Transport_Fuel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then transport fuel is not included in the price--it&#39;s a pass-through line item on the TC.</description>
    <inlineHelpText>If checked, then transport fuel is not included in the price--it&#39;s a pass-through line item on the TC.</inlineHelpText>
    <label>Transport Fuel Pass-Through</label>
    <type>Checkbox</type>
</CustomField>