force-app/main/default/objects/Pipeline_Scenario__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipName>Pipeline_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>