force-app/main/default/objects/Pipeline_Scenario__c/fields/Utility_Cashout__c.field-meta.xml
<CustomField>
    <fullName>Utility_Cashout__c</fullName>
    <label>Utility Cashout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass through at cost</fullName>
            </value>
            <value>
                <fullName>Market</fullName>
            </value>
            <value>
                <fullName>Utility&#39;s published 0% imbalance level cashout rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>