force-app/main/default/objects/Pipeline_Scenario__c/fields/Utility_Meter_Read_Pooling__c.field-meta.xml
<CustomField>
    <fullName>Utility_Meter_Read_Pooling__c</fullName>
    <label>Utility Meter Read/Pooling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>applicable meter read/pooling fees</fullName>
            </value>
            <value>
                <fullName>$1.50 per facility per month</fullName>
            </value>
            <value>
                <fullName>$5.00 per facility per month</fullName>
            </value>
            <value>
                <fullName>$10.00 per facility per month</fullName>
            </value>
            <value>
                <fullName>$15.00 per facility per month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>