force-app/main/default/objects/Pipeline_Scenario__c/fields/Utility_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Utility_Transportation__c</fullName>
    <label>Utility Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>passed through at cost</fullName>
            </value>
            <value>
                <fullName>CEIP transportation passed through at cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>