force-app/main/default/objects/Pipeline_Scenario__c/fields/Winter_Swing__c.field-meta.xml
<CustomField>
    <fullName>Winter_Swing__c</fullName>
    <defaultValue>0</defaultValue>
    <description>per Dth</description>
    <inlineHelpText>per Dth</inlineHelpText>
    <label>Winter Swing</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>