force-app/main/default/objects/Pipeline_Scenario__c/validationRules/Pick_a_Physical_Basis.validationRule-meta.xml
<ValidationRule>
    <fullName>Pick_a_Physical_Basis</fullName>
    <active>true</active>
    <errorConditionFormula>and(isnull(Physical_Premium_to_Index_Constant__c),   isnull(Physical_Premium_to_Index__c))</errorConditionFormula>
    <errorDisplayField>Physical_Premium_to_Index_Constant__c</errorDisplayField>
    <errorMessage>PricingScenario01: You have to pick a physical premium to the index (either strip or constant)</errorMessage>
</ValidationRule>