force-app/main/default/objects/Pipeline_Scenario__c/listViews/CO_Pricing_Scenarios.listView-meta.xml
<ListView>
    <fullName>CO_Pricing_Scenarios</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Utility__c</field>
        <operation>equals</operation>
        <value>Xcel Energy (PSCO) - Colorado</value>
    </filters>
    <label>CO Pricing Scenarios</label>
    <language>en_US</language>
</ListView>