force-app/main/default/objects/Pipeline_Scenario__c/listViews/Gulf_States_Pricing_Scenarios.listView-meta.xml
<ListView>
    <fullName>Gulf_States_Pricing_Scenarios</fullName>
    <columns>NAME</columns>
    <columns>Pipeline__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Utility__c</field>
        <operation>equals</operation>
        <value>CenterPoint Energy (Entex - Texas)</value>
    </filters>
    <label>Gulf States - TX - Pricing Scenarios</label>
    <language>en_US</language>
</ListView>