force-app/main/default/objects/Pipeline_Scenario__c/listViews/NM_Pricing_Scenarios.listView-meta.xml
<ListView>
    <fullName>NM_Pricing_Scenarios</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Utility__c</field>
        <operation>equals</operation>
        <value>New Mexico Gas Company</value>
    </filters>
    <label>NM Pricing Scenarios</label>
    <language>en_US</language>
</ListView>